Add kapt JDK 16+ module access flags and increase stack size